Bug 1541396 - Add GLBuffer prebind workaround. r=lsalzman

BindBufferBase/Range will fail (on some drivers) if the buffer name has never been bound.
(GenBuffers makes a name, but BindBuffer initializes that name as a real buffer object)

Include test fix:
https://github.com/KhronosGroup/WebGL/pull/2907

Differential Revision: https://phabricator.services.mozilla.com/D36417